# ads

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
gpt/: web.py
gpt/contexts/: ts_context.txt
notebooks/: eda.ipynb
src/: main.py
src/data/: fcast.csv
src/ml/: forecast.py  train.py
src/models/: model.jl
src/toolbox/: data.py  data_model.py  model.py
