[tool.poetry]
name = "ads-case-problem"
version = "0.1.0"
description = ""
authors = ["Esteban Sánchez <esteban.sanchez@bravent.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
sktime = "^0.29.0"
optuna = "^3.6.1"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
loguru = "^0.7.2"
streamlit = "^1.34.0"
openai = "^1.30.1"
pmdarima = "^2.0.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
